--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowledge Vault</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <h2>testing the deployment of live link</h2>
+<body class="open-sans">
+    <header>
+        <nav id="navbar">
+            <div class="navbar-section">
+                <div class="navbar-image">
+                    <img src="./assets/logo-navbar.png" alt="">
+                </div>
+                <div class="navbar-list">
+                    <ul>
+                        <li><a href="">Features</a></li>
+                        <li><a href="">How It Works</a></li>
+                        <li><a href="">Why It's Different</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-button">
+                    <button>Get Early Access</button>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
