--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="open-sans">
@@ -28,6 +29,49 @@
                 </div>
             </div>
         </nav>
+        <section id="banner">
+            <div class="banner-btn">
+                <button><i class="fa-solid fa-circle-half-stroke"></i> Early Access Now Open</button>
+            </div>
+            <div class="banner-text">
+                <h2 class="t1">Structured thinking,</h2>
+                <h2 class="t2">Not Just Note-Taking.</h2>
+                <p>A private space to store notes, links, and learning summaries — designed to<br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            </div>
+            <div class="banner-button">
+                <button class="banner-button1">Start Building Your Vault <img src="./assets/ArrowRight.png" alt=""></button>
+                <button class="banner-button2"><i class="fa-solid fa-play"></i> See How It Works</button>
+            </div>
+        </section>
     </header>
+    <section id="section2">
+        <div class="hp">
+            <h1>Notes don't fail, Structure does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div class="imgcon">
+            <div class="imgin">
+                <img src="./assets/Vector.png" alt="" style="display: block;">
+                <h2>Scattered notes</h2>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="imgin">
+                <img src="./assets/Bookmarks.png" alt="" style="display: block;">
+                <h2>Bookmark overload</h2>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="imgin">
+                <img src="./assets/Brain.png" alt="" style="display: block;">
+                <h2>No idea connections</h2>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="imgin">
+                <img src="./assets/Info.png" alt="" style="display: block;">
+                <h2>Forgetting what you learned</h2>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
