--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button><i class="fa-solid fa-circle-half-stroke"></i> Early Access Now Open</button>
             </div>
             <div class="banner-text">
-                <h2 class="t1">Structured thinking,</h2>
+                <h2 class="t1">Structured Thinking,</h2>
                 <h2 class="t2">Not Just Note-Taking.</h2>
                 <p>A private space to store notes, links, and learning summaries — designed to<br>
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
@@ -47,29 +47,52 @@
     </header>
     <section id="section2">
         <div class="hp">
-            <h1>Notes don't fail, Structure does.</h1>
+            <h1>Notes Don't Fail, Structure Does.</h1>
             <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
         </div>
         <div class="imgcon">
             <div class="imgin">
-                <img src="./assets/Vector.png" alt="" style="display: block;">
-                <h2>Scattered notes</h2>
+                <img src="./assets/Vector.png" alt="">
+                <h2>Scattered Notes</h2>
                 <p>Your ideas live in 10 different apps, none of them connected.</p>
             </div>
             <div class="imgin">
-                <img src="./assets/Bookmarks.png" alt="" style="display: block;">
-                <h2>Bookmark overload</h2>
+                <img src="./assets/Bookmarks.png" alt="">
+                <h2>Bookmark Overload</h2>
                 <p>Hundreds of saved links you'll never revisit or remember.</p>
             </div>
             <div class="imgin">
-                <img src="./assets/Brain.png" alt="" style="display: block;">
-                <h2>No idea connections</h2>
+                <img src="./assets/Brain.png" alt="">
+                <h2>No Idea Connections</h2>
                 <p>Insights stay isolated, never building into bigger understanding.</p>
             </div>
             <div class="imgin">
-                <img src="./assets/Info.png" alt="" style="display: block;">
-                <h2>Forgetting what you learned</h2>
+                <img src="./assets/Info.png" alt="">
+                <h2>Forgetting What You Learned</h2>
                 <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <img src="./assets/knowledge.png" alt="">
+        </div>
+        <div>
+            <div>
+                <p>The Solution</p>
+                <h3>Your Second Brain,<br>
+                    Structured By Design.</h3>
+                <p>Personal Knowledge Vault isn't another note-taking app. z<br>
+                    It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.</p>
+            </div>
+            <div>
+                <ul>
+                    <li><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+                </ul>
             </div>
         </div>
     </section>
