--- a/index.html
+++ b/index.html
@@ -73,25 +73,24 @@
             </div>
         </div>
     </section>
-
-    <section>
-        <div>
+    <section id="section3">
+        <div class="section3-img">
             <img src="./assets/knowledge.png" alt="">
         </div>
-        <div>
-            <div>
-                <p>The Solution</p>
+        <div class="section3-text-list">
+            <div class="section3-text">
+                <p class="p1">THE SOLUTION</p>
                 <h3>Your Second Brain,<br>
                     Structured By Design.</h3>
-                <p>Personal Knowledge Vault isn't another note-taking app. z<br>
+                <p class="p2">Personal Knowledge Vault isn't another note-taking app. z<br>
                     It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.</p>
             </div>
-            <div>
+            <div class="section3-list">
                 <ul>
-                    <li><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</li>
-                    <li><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</li>
-                    <li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</li>
-                    <li><img src="./assets/CheckCircle.png" alt="">Find anything instantly with semantic search</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">&nbsp; Capture ideas with structure built-in from day one</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">&nbsp; Connect related concepts automatically as you write</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">&nbsp; Build lasting knowledge through reflection prompts</li>
+                    <li><img src="./assets/CheckCircle.png" alt="">&nbsp; Find anything instantly with semantic search</li>
                 </ul>
             </div>
         </div>
