--- a/index.html
+++ b/index.html
@@ -95,5 +95,20 @@
             </div>
         </div>
     </section>
+    <section id="section4">
+            <div class="section4-text">
+                <h1>Ready To Think More Clearly?</h1>
+                <p>
+                Join thousands of learners who are building their personal knowledge vaults.<br>
+                Start free, no credit card required.
+                </p>
+            </div>
+            <div class="section4-button">
+                <button>Get Early Access &nbsp;<img src="./assets/ArrowRight.png" alt=""></button>
+            </div>
+            <div class="    section4-txt">
+                <p>Free during early access • No credit card needed</p>
+            </div>
+    </section>
 </body>
 </html>
