--- a/index.html
+++ b/index.html
@@ -106,9 +106,28 @@
             <div class="section4-button">
                 <button>Get Early Access &nbsp;<img src="./assets/ArrowRight.png" alt=""></button>
             </div>
-            <div class="    section4-txt">
+            <div class="section4-txt">
                 <p>Free during early access • No credit card needed</p>
             </div>
     </section>
+    <footer id="footer">
+        <div class="footer-con">
+            <div class="footer-img">
+            <img src="./assets/logo-footer.png" alt="">
+            </div>
+            <div >
+            <p>Social Links</p>
+            <div class="footer-icon">
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            </div>
+        </div>
+        <div class="hr"><hr></div>
+    </footer>
+    <div class="copyright">
+        <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </div>
 </body>
 </html>
