almost done but yet few issues like button text and icon alignment and width issue

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                 <h3>Your Second Brain,<br>
                     Structured By Design.</h3>
                 <p class="p2">Personal Knowledge Vault isn't another note-taking app. z<br>
-                    It's a thinking environment where every note, link, and summary<br>becomes part of an interconnected web of understanding.</p>
+                    It's a thinking environment where every note, link, and summary<br>
+                    becomes part of an interconnected web of understanding.</p>
             </div>
             <div class="section3-list">
                 <ul>
