live link vs local link

--- a/index.html
+++ b/index.html
@@ -130,5 +130,6 @@
     <div class="copyright">
         <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
     </div>
+    <!-- live link ar local link er majhe difference -->
 </body>
 </html>
